Fixed acceleration bug

--- a/teaching/calc3/curvature-torsion/index.html
+++ b/teaching/calc3/curvature-torsion/index.html
@@ -228,7 +228,7 @@ title: Curvature and torsion
             <span data-id="ctn">
                 \[
                     \mathbf{r}''(t) =
-                    v'(t) \mathbf{T} + (v'(t))^2 \, \kappa(t) \, \mathbf{N}(t),
+                    v'(t) \mathbf{T} + (v(t))^2 \, \kappa(t) \, \mathbf{N}(t),
                 \]
             </span>
             where $v(t) = \| \mathbf{r}'(t) \|$ is the <em>speed</em> of the object
