Fixed inner product lecture

--- a/teaching/applinalg/lectures/innerprod.html
+++ b/teaching/applinalg/lectures/innerprod.html
@@ -278,7 +278,7 @@ title: Dot product and inner product space
 </section>
 <section>
     <h3>
-        Exercise
+        Exercises
     </h3>
     <p>
         We can verified that
@@ -293,9 +293,28 @@ title: Dot product and inner product space
                 \end{bmatrix}
             \right\rangle
             =
-            2 u_1 v_1 + 3 u_1 v_2 + 3 u_2 v_1 + 4 u_2 v_2
+            4 u_1 v_1 + 3 u_1 v_2 + 3 u_2 v_1 + 4 u_2 v_2
         \]
         satisfies the properties listed above.
+    </p>
+    <p class="fragment">
+        However, the function
+        \[
+            g
+            \left(
+                \begin{bmatrix}
+                    u_1 \\ u_2
+                \end{bmatrix}
+                \,,\,
+                \begin{bmatrix}
+                    v_1 \\ v_2
+                \end{bmatrix}
+            \right)
+            =
+            1 u_1 v_1 + 2 u_1 v_2 + 3 u_2 v_1 + 4 u_2 v_2
+        \]
+        will not define an inner product.
+        Can you see why?
     </p>
 </section>
 <section>
@@ -370,4 +389,10 @@ title: Dot product and inner product space
         for an <em>inner product space</em>
         is a basis in which vectors are mutually orthogonal.
     </div>
+    <p class="fragment">
+        In a sense, an orthogonal basis is a more natural choice
+        of basis for a subspace.
+        After all, in the plane, we prefer choice of $x$-axis and $y$-axis
+        forming a 90 degree angle.
+    </p>
 </section>
