Adding matrix type lecture

--- a/teaching/applinalg/lectures/rank_inverse.html
+++ b/teaching/applinalg/lectures/rank_inverse.html
@@ -1,11 +1,11 @@
 ---
 layout: ilecture_only
-title: Matrix product
+title: Rank and inverse
 ---
 
 <section class="titlepage">
     <div class="titlebox">
-        <h2 class="title">Rank and inverse of matrices</h2>
+        <h2 class="title">Rank and inverse</h2>
         <!-- <p class="small">
         </p> -->
     </div>
