Fixed some typos

--- a/teaching/applinalg/lectures/matrix_application.html
+++ b/teaching/applinalg/lectures/matrix_application.html
@@ -36,7 +36,7 @@ title: Matrices from applications
                 \]
                 <span class="small">
                     scales vectors uniformly
-                    by a factor of some positive factor $a$
+                    by some positive factor $a$
                 </span>
             </p>
         </div>
@@ -170,8 +170,8 @@ title: Matrices from applications
                          0  &  0 & -1
                     \end{bmatrix}
                 \]
-                long the $y$-axis
-                (i.e. over the $xz$-plane)
+                long the $z$-axis
+                (i.e. over the $xy$-plane)
             </p>
         </div>
     </div>
