--- a/teaching/applinalg/lectures/matrix_cov.html
+++ b/teaching/applinalg/lectures/matrix_cov.html
@@ -113,6 +113,7 @@ title: Covariance matrices
         Similarly, suppose $X$ is a matrix that capture some sample data,
         in which columns represent different variables,
         and rows represent different samples.
+        (The opposite arrangement)
         <!-- <span class="fragment">
             we also assume the matrix has 0 row mean
             (i.e., the mean value of each row is 0).
@@ -127,7 +128,7 @@ title: Covariance matrices
         \[
             Q_{XX} = \frac{1}{n-1} (X - \overline{X})^\top (X-\overline{X})
         \]
-        where $n$ is the number of columns in $X$,
+        where $n$ is the number of rows in $X$,
         and $\overline{X}$ is a matrix of the same size as $X$
         that contains the mean column values of $X$.
     </div>
