Updated linear system lecture

--- a/teaching/applinalg/lectures/linear_sys.html
+++ b/teaching/applinalg/lectures/linear_sys.html
@@ -294,6 +294,55 @@ title: Systems of linear equations
     </div>
 </section>
 <section>
+    <h3>Diet problem</h3>
+    <p>
+        The "diet problem" is of great historic importance
+        in the development of applied mathematics.
+        Consider the problem of choosing preserved foods 
+        to meet certain nutritional requirements of expedition
+        where supply may be difficult to come by.
+    </p>
+    <div class="fragment">
+        <table>
+            <thead>
+                <tr>
+                    <td>Food source</td>
+                    <td>Vitamin A</td>
+                    <td>Vitamin C</td>
+                    <td>k-Calories</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Beef</td>
+                    <td>0.02</td>
+                    <td>0.00</td>
+                    <td>3.13</td>
+                </tr>
+                <tr>
+                    <td>Fish</td>
+                    <td>0.55</td>
+                    <td>3.70</td>
+                    <td>3.66</td>
+                </tr>
+                <tr>
+                    <td>Pasta</td>
+                    <td>0.05</td>
+                    <td>0.00</td>
+                    <td>0.750</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>
+            Let $M_A, M_C, M_{\text{cal}}$ be the minimum amount of
+            vitamin A, vitamin C, and calories a person requires each day
+            (measured in kIU, mg, and kcal respectively).
+            What is the combination of the three food sources
+            that will meet these requirements?
+        </p>
+    </div>
+</section>
+<section>
     <h3>Linear systems and matrices</h3>
     <p>
         We can now view a linear system as
