Adding eigenvector lecture

--- a/teaching/applinalg/lectures/eigen.html
+++ b/teaching/applinalg/lectures/eigen.html
@@ -439,7 +439,7 @@ $90^\circ$. -->
         For an eigenvalue $\lambda$ of an $n \times n$ matrix $A$,
         the set
         \[
-            E_{\lambda} = \{ 
+            E_{A}(\lambda) = \{ 
                 \mathbf{v} \in \mathbb{R}^n \mid 
                 A \mathbf{v} = \lambda \mathbf{v}
             \}
