--- a/teaching/applinalg/lectures/eigenvector.html
+++ b/teaching/applinalg/lectures/eigenvector.html
@@ -241,7 +241,7 @@ title: Eigendecompositions and more eigen-things
         </div>
         <div class="col">
             <p class="fragment">
-                That is, they are the roots of the quadratic polynomial
+                That is, $\mathbf{v}$ satisfies
                 \[
                     (A \mathbf{v} - \lambda I) \mathbf{v} = \mathbf{0}
                 \]
@@ -335,7 +335,7 @@ title: Eigendecompositions and more eigen-things
             =
             \left[
             \begin{smallmatrix}
-                -1 & -5/3 \\
+                -2 & -5/3 \\
                 1 & 1
             \end{smallmatrix}
             \right]
@@ -347,7 +347,7 @@ title: Eigendecompositions and more eigen-things
             \right]
             \left[
             \begin{smallmatrix}
-                -1 & -5/3 \\
+                -2 & -5/3 \\
                 1 & 1
             \end{smallmatrix}
             \right]^{-1}
