Fixed the simulation

--- a/talks/GT-2022F/index.html
+++ b/talks/GT-2022F/index.html
@@ -283,7 +283,7 @@ title: Generic and non-generic synchronization configurations
 <section>
     <h3>Simple simulation</h3>
     <div class="center">
-        <iframe data-src="../../research/kuramoto/sim/" height="600" width="800"></iframe>
+        <iframe data-src="https://www.tianranchen.org/research/kuramoto/sim/" height="600" width="860"></iframe>
     </div>
 </section>
 <section>
