Adding V is MV reference

--- a/talks/GT-2022F/index.html
+++ b/talks/GT-2022F/index.html
@@ -1292,6 +1292,9 @@ Power Flow Solutions, 2016 American Control Conference (ACC), (2016)
     <p class="fragment">
         The specialized problem of computing mixed volume of simplices is
         at least as "hard" as the general problem of computing volume.
+        <span class="smaller lowlight">
+            (http://arxiv.org/abs/2108.12875)
+        </span>
     </p>
     <br/>
     <p class="fragment">
