--- a/talks/JMM2023/index.html
+++ b/talks/JMM2023/index.html
@@ -56,7 +56,7 @@ title: Stratified polyhedral homotopy
 <section id="goal">
     <h3>Goal</h3>
     <p>
-        "Sample" points in of non-isolated components
+        "Sample" points in non-isolated components
         as by-products of computing isolated zero set
         via polyhedral homotopy method.
     </p>
@@ -168,7 +168,7 @@ title: Stratified polyhedral homotopy
             extend this method to isolated $\mathbb{C}$-zeros.
         </li>
         <li>
-            PHCpack, Hom4PS-1,2,3, pHom, HomotopyContinuation.jl,......
+            PHCpack, Hom4PS-*, pHom, PSS, HomotopyContinuation.jl...
         </li>
     </ul>
     <br/>
@@ -200,7 +200,7 @@ title: Stratified polyhedral homotopy
                 <em>Computing Pretropisms for the Cyclic n-Roots Problem</em>.
                 In EuroCG 2016.
             </li>
-            <li>
+            <li class="smaller">
                 ......
             </li>
         </ul>
@@ -222,7 +222,7 @@ title: Stratified polyhedral homotopy
             “Witness set” is the standard data structure
             for representing these components
             <span class="lowlight">
-                (Generic linear linear slices)
+                (Generic linear slices)
             </span>
         </li>
     </ul>
@@ -347,7 +347,7 @@ title: Stratified polyhedral homotopy
     <p>
         What will happen to the zero set of
         $F(x_1,x_2 \;;\; \mathbf{c})$
-        if replace $\mathbf{c}$ by a generic point
+        if we replace $\mathbf{c}$ by a generic point
         $\mathbf{c}^*$ in the coefficient space $\mathbb{C}^{18}$?
     </p>
     <div class="cols">
