Removing mixed case

--- a/talks/JMM2023/index.html
+++ b/talks/JMM2023/index.html
@@ -862,9 +862,6 @@ title: Stratified polyhedral homotopy
         <li>
             Computing non-reduced components?
         </li>
-        <li>
-            Mixed case?
-        </li>
     </ul>
 </section>
 <section>
@@ -882,7 +879,7 @@ title: Stratified polyhedral homotopy
         http://arxiv.org/abs/2108.12875 (Volume equals mixed volume)
     </p>
     <p class="center">
-        https://arxiv.org/abs/2111.14317 (libDH)
+        https://arxiv.org/abs/2111.14317 (GPU acceleration)
     </p>
     <br/>
     <p class="center">
