--- a/teaching/applinalg/lectures/vectors.html
+++ b/teaching/applinalg/lectures/vectors.html
@@ -19,8 +19,8 @@ title: Vectors in the plane
 <section>
     <h3>Vectors in $\mathbb{R}^2$</h3>
     <p>
-        A <b>"vector"</b> in $\mathbb{R}^2$ is simply a mathematical object
-        consisting of two real numbers like
+        A <b>"vector"</b> in $\mathbb{R}^2$ is a object
+        consisting of two real numbers. E.g.
         \[
             \begin{bmatrix} 3 \\ 4 \end{bmatrix}.
         \]
