--- a/teaching/applinalg/lectures/eigen.html
+++ b/teaching/applinalg/lectures/eigen.html
@@ -62,6 +62,18 @@ title: Eigenvalues and eigenvectors
     </p>
 </section>
 <section>
+    <h3>Geometric meaning</h3>
+    <p>
+        A $2 \times 2$ matrix represents a linear transformation
+        of the plane (to itself).
+    </p>
+    <div id="sketch-holder">
+    </div>
+    <script language="javascript" type="text/javascript" src="/js/p5.min.js"></script>
+    <script language="javascript" type="text/javascript" src="/js/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="/js/matvec.js"></script>
+</section>
+<section>
     <h3>Warmup exercises</h3>
     <p>
         For a square matrix $A$,
@@ -331,7 +343,7 @@ title: Eigenvalues and eigenvectors
             \end{bmatrix}
         \end{align*}
     </div>
-    <p>
+    <p class="fragment">
         It is possible for $\lambda_1 = \lambda_2$,
         <span class="lowlight">
             i.e., the characteristic polynomial has a "double root".
