--- a/teaching/applinalg/lectures/least_squares.html
+++ b/teaching/applinalg/lectures/least_squares.html
@@ -5,13 +5,13 @@ title: The least-squares problem
 
 <section class="titlepage">
     <div class="titlebox">
-        <h2 class="title">Least-squares problems</h2>
+        <h2 class="title">Linear least squares problems</h2>
         <p class="small">
             Finding best solutions to $Ax \approx b$
         </p>
     </div>
         <p>
-            The least-squares problem is one of the fundamental problems
+            The linear least squares problem is one of the fundamental problems
             in numerical computations
             and it is closely linked to many problems in data science.
         </p>
@@ -25,7 +25,7 @@ title: The least-squares problem
     <h3>Review: linear systems</h3>
     <p>
         Recall that a system of linear equations can be
-        expressed as a single equation in the matrix-vector form
+        expressed as
         \[
             A \mathbf{x} = \mathbf{b}
         \]
@@ -35,12 +35,14 @@ title: The least-squares problem
     </p>
     <p class="fragment">
         Such a linear system has natural geometric interpretations.
-        However, there are multiple different interpretations,
+    </p>
+    <p class="fragment">
+        There are multiple different geometric interpretations,
         depending on our point of views.
-        <span class="fragment lowlight">
-            Holding these very different interpretations
-            at the same time is an important skill we need to develop.
-        </span>
+    </p>
+    <p class="fragment lowlight">
+        Holding these very different interpretations
+        at the same time is an important skill we need to develop.
     </p>
     <!-- <div class="cols">
         <div class="col">
@@ -72,6 +74,40 @@ title: The least-squares problem
         </div>
     </div>
     <img src="../linearsys.png" alt="Linear system as intersection of lines" class="r-stretch">
+</section>
+<section>
+    <h3>Column interpretation</h3>
+    <p>
+        The system of equations
+        \[
+            \left\{
+                \begin{aligned}
+                    1x + 2y &= 1 \\
+                    3x - 2y &= 3
+                \end{aligned}
+            \right.
+        \]
+        is equivalent to
+        \[
+            x \,
+            \begin{bmatrix}
+                1 \\ 3
+            \end{bmatrix}
+            +
+            y \,
+            \begin{bmatrix}
+                2 \\ -2
+            \end{bmatrix}
+            =
+            \begin{bmatrix}
+                1 \\ 3
+            \end{bmatrix}
+        \]
+    </p>
+    <div class="problem fragment">
+        Can you come up with a different
+        geometric interpretation of the above equation?
+    </div>
 </section>
 <section>
     <h3>Overdetermined system</h3>
